chore: extracted utils

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -66,3 +66,10 @@ jobs:
       - name: Run Tests
         run: |
           poetry run pytest
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: junit/test-results-${{ matrix.python-version }}.xml
+        # Use always() to always run this step to publish test results when there are test failures
+        if: ${{ always() }}
