--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,19 +59,17 @@ schema_pattern = "(build|ci|docs|feat|fix|perf|refactor|style|test|chore|revert|
 
 [tool.poetry]
 name = "jurassic-tokenization"
-version = "0.0.0"
+version = "0.0.1"
 description = ""
 authors = ["AI21 Labs"]
 readme = "README.md"
 packages = [
     { include = "jurassic_tokenization" }
 ]
-include = [
-    { path = "tests", format = "sdist" }
-]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+sentencepiece = "0.1.96"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -91,6 +89,9 @@ pytest-mock = "3.10.0"
 [[tool.poetry.source]]
 name = "PyPI"
 priority = "primary"
+
+[tool.ruff]
+line-length = 120
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
