--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,9 @@ ruff = "*"
 python-semantic-release = "^7.31.4"
 
 [tool.semantic_release]
-version_toml = ["pyproject.toml.tool.poetry.version"]
+version_toml = [
+    "pyproject.toml:tool.poetry.version"
+]
 match = "(release_action)"
 upload_to_pypi = false
 upload_to_repository = false
@@ -91,6 +93,10 @@ version_source = "tag"
 commit_version_number = true
 major_on_zero = false
 commit_message = "chore(release): v{version} [skip ci]"
+
+[tool.semantic_release.branches.release_action]
+match = "(release_action)"
+prerelease = false
 
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
