fix: branch to main

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,20 +84,17 @@ python-semantic-release = "^7.31.4"
 version_toml = [
     "pyproject.toml:tool.poetry.version"
 ]
-match = "(release_action)"
+match = "(main)"
 upload_to_pypi = false
-upload_to_repository = false
 upload_to_release = true
 build_command = "pip install poetry && poetry build"
 version_source = "tag"
 commit_version_number = true
-major_on_zero = false
+major_on_zero = false # to be removed once we feel comfortable enough to increase major version
 commit_message = "chore(release): v{version} [skip ci]"
 
-[tool.semantic_release.branches.release_action]
-match = "(release_action)"
-prerelease = false
-
+[tool.semantic_release.branches.main]
+match = "(main)"
 
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
