--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -2,7 +2,7 @@ name: Semantic Release
 
 on:
   push:
-    branches: [release_action]
+    branches: [main]
 
 jobs:
   release:
@@ -21,3 +21,7 @@ jobs:
         uses: python-semantic-release/python-semantic-release@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+# Uncomment when we have a PyPI package to publish
+#    - name: Publish package distributions to PyPI
+#      uses: pypa/gh-action-pypi-publish@release/v1
+#      if: steps.release.outputs.released == 'true'
