--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,9 @@ python-semantic-release = "^7.31.4"
 version_toml = [
     "pyproject.toml:tool.poetry.version"
 ]
+version_variable = [
+    "__version__"
+]
 match = "(main)"
 upload_to_pypi = false
 upload_to_release = true
