--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,27 @@ isort = "*"
 mypy = "*"
 safety = "*"
 ruff = "*"
+python-semantic-release = "^8.3.0"
+
+[tool.semantic_release]
+version_toml = [
+    "pyproject.toml:tool.poetry.version"
+]
+version_variable = [
+    "__version__"
+]
+match = "(main)"
+upload_to_pypi = false
+upload_to_release = true
+build_command = "pip install poetry && poetry build"
+version_source = "tag"
+commit_version_number = true
+major_on_zero = false # to be removed once we feel comfortable enough to increase major version
+commit_message = "chore(release): v{version} [skip ci]"
+
+[tool.semantic_release.branches.main]
+match = "(main)"
+
 
 
 [tool.poetry.group.test.dependencies]
