--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -21,6 +21,12 @@ jobs:
         uses: python-semantic-release/python-semantic-release@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@main
+        if: steps.release.outputs.released == 'true'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 # Uncomment when we have a PyPI package to publish
 #    - name: Publish package distributions to PyPI
 #      uses: pypa/gh-action-pypi-publish@release/v1
