--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,7 +87,7 @@ version_toml = [
 version_variable = [
     "__version__"
 ]
-match = "(release_action_test)"
+match = "(main)"
 upload_to_pypi = false
 upload_to_release = true
 build_command = "pip install poetry && poetry build"
@@ -96,8 +96,8 @@ commit_version_number = true
 major_on_zero = false # to be removed once we feel comfortable enough to increase major version
 commit_message = "chore(release): v{version} [skip ci]"
 
-[tool.semantic_release.branches.release_action_test]
-match = "(release_action_test)"
+[tool.semantic_release.branches.main]
+match = "(main)"
 
 
 [tool.poetry.group.test.dependencies]
