fix: Release action test (#5)
* fix: Added release step

* fix: branch name for testing

* fix: Removed comment

* chore(release): v0.0.1 [skip ci]

* fix: branch rename

* fix: Removed CHANGELOG.md

---------

Co-authored-by: github-actions <github-actions@github.com>

--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -21,7 +21,9 @@ jobs:
         uses: python-semantic-release/python-semantic-release@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-# Uncomment when we have a PyPI package to publish
-#    - name: Publish package distributions to PyPI
-#      uses: pypa/gh-action-pypi-publish@release/v1
-#      if: steps.release.outputs.released == 'true'
+
+      - name: Publish package distributions to GitHub Releases
+        uses: python-semantic-release/upload-to-gh-release@main
+        if: steps.release.outputs.released == 'true'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
