--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          github_token: ${{ secrets.GH_PAT_SEM_REL }}
 
       - name: Show GitHub context
         env:
