--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -17,13 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          github_token: ${{ secrets.GH_PAT_SEM_REL }}
-
-      - name: Show GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-        shell: bash
+          token: ${{ secrets.GH_PAT_SEM_REL }}
 
       - name: Python Semantic Release
         uses: python-semantic-release/python-semantic-release@master
@@ -35,4 +29,4 @@ jobs:
         uses: python-semantic-release/upload-to-gh-release@main
         if: steps.release.outputs.released == 'true'
         with:
-          github_token: ${{ secrets.GH_PAT_SEM_REL }}
+          token: ${{ secrets.GH_PAT_SEM_REL }}
