--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_PAT_SEM_REL }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Python Semantic Release
         uses: python-semantic-release/python-semantic-release@master
