--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_PAT_SEM_REL }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Python Semantic Release
         uses: python-semantic-release/python-semantic-release@master
@@ -29,4 +29,4 @@ jobs:
         uses: python-semantic-release/upload-to-gh-release@main
         if: steps.release.outputs.released == 'true'
         with:
-          token: ${{ secrets.GH_PAT_SEM_REL }}
+          token: ${{ secrets.GITHUB_TOKEN }}
