fix: Added more config to dependabot action

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,4 +10,7 @@ updates:
     schedule:
       interval: "weekly"
     commit-message:
-      prefix: "chore"
+      prefix: "fix"
+      prefix-development: "chore"
+      include: "scope"
+
