--- a/.github/workflows/semantic-pr.yaml
+++ b/.github/workflows/semantic-pr.yaml
@@ -5,11 +5,6 @@ concurrency:
   group: Semantic-PR-${{ github.head_ref }}
   cancel-in-progress: true
 
-
-permissions:
-  contents: read
-
-
 on:
   pull_request:
     types:
@@ -18,6 +13,7 @@ on:
       - reopened
 jobs:
   semantic-pr:
+    permissions: read-all
     runs-on: ubuntu-20.04
     timeout-minutes: 1
     steps:
