--- a/.github/workflows/semantic-pr.yaml
+++ b/.github/workflows/semantic-pr.yaml
@@ -4,6 +4,7 @@ name: Semantic PR
 concurrency:
   group: Semantic-PR-${{ github.head_ref }}
   cancel-in-progress: true
+
 on:
   pull_request:
     types:
@@ -12,6 +13,7 @@ on:
       - reopened
 jobs:
   semantic-pr:
+    permissions: write-all
     runs-on: ubuntu-20.04
     timeout-minutes: 1
     steps:
