--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -18,6 +18,7 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: false
+          token: ${{ secrets.GH_PAT_SEM_REL }}
           ref: main
 
       - name: Python Semantic Release
