--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ schema_pattern = "(build|ci|docs|feat|fix|perf|refactor|style|test|chore|revert|
 
 [tool.poetry]
 name = "jurassic-tokenization"
-version = "0.1.0"
+version = "0.0.1"
 description = ""
 authors = ["AI21 Labs"]
 readme = "README.md"
@@ -85,9 +85,9 @@ version_toml = [
     "pyproject.toml:tool.poetry.version"
 ]
 version_variable = [
-    "__version__"
+    "version.py:__version__"
 ]
-match = "(fix_sem_rel_token)"
+match = "(main)"
 upload_to_release = true
 build_command = "pip install poetry && poetry build"
 version_source = "tag"
@@ -95,9 +95,8 @@ commit_version_number = true
 major_on_zero = false # to be removed once we feel comfortable enough to increase major version
 commit_message = "chore(release): v{version} [skip ci]"
 
-[tool.semantic_release.branches.fix_sem_rel_token]
-match = "(fix_sem_rel_token)"
-
+[tool.semantic_release.branches.main]
+match = "(main)"
 
 
 [tool.poetry.group.test.dependencies]
