--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: check-added-large-files
-        exclude: (tokenizer/resources|tests/resources)
+        exclude: (ai21_tokenizer/resources|tests/resources)
       - id: check-case-conflict
       - id: check-executables-have-shebangs
       - id: check-shebang-scripts-are-executable
@@ -20,7 +20,7 @@ repos:
     rev: 3.0.0
     hooks:
       - id: forbid-binary
-        exclude: (tokenizer/resources|tests/resources)
+        exclude: (ai21_tokenizer/resources|tests/resources)
       - id: git-check
   - repo: https://github.com/commitizen-tools/commitizen
     rev: 3.5.3
