--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,12 @@ profile = "black"
 combine_as_imports = true
 lines_between_types = 1
 lines_after_imports = 2
-src_paths = [ "tokenizer", "tests"]
+src_paths = [ "ai21_tokenizer", "tests"]
 
 [tool.coverage.run]
 
 branch = true
-source = ["tokenizer", "tests"]
+source = ["ai21_tokenizer", "tests"]
 omit = ["tests/fixtures/*"]
 
 [tool.coverage.report]
