fix: token name

--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -19,5 +19,5 @@ jobs:
       - name: Python Semantic Release
         uses: python-semantic-release/python-semantic-release@master
         with:
-          github_token: ${{ secrets.GH_PAT_SEM_REL }}
+          github_token: ${{ secrets.GH_PAT_SEM_REL_ASAFG }}
           root_options: "-vv"
