--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -123,4 +123,5 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+        end-of-line: lf
       - id: mixed-line-ending
