--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -123,5 +123,8 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
-        end-of-line: lf
       - id: mixed-line-ending
+  - repo: https://github.com/Lucas-C/pre-commit-hooks
+    rev: v1.5.4
+    hooks:
+      - id: remove-crlf
