--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,12 +22,14 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: mixed-line-ending
+        exclude: (CHANGELOG.md)
   - repo: https://github.com/jumanjihouse/pre-commit-hooks
     rev: 3.0.0
     hooks:
       - id: forbid-binary
         exclude: (ai21_tokenizer/resources|tests/resources)
       - id: git-check
+        exclude: (CHANGELOG.md)
   - repo: https://github.com/commitizen-tools/commitizen
     rev: 3.5.3
     hooks:
