--- a/.github/workflows/release_version.yaml
+++ b/.github/workflows/release_version.yaml
@@ -20,7 +20,7 @@ jobs:
           persist-credentials: false
 
       - name: Python Semantic Release
-        uses: python-semantic-release/python-semantic-release@master
+        uses: python-semantic-release/python-semantic-release@v8.3.0
         with:
           github_token: ${{ secrets.GH_PAT_SEM_REL_ASAFG }}
           root_options: "-vv"
