ci: exclude changelog

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
       - id: forbid-binary
         exclude: (ai21_tokenizer/resources|tests/resources)
       - id: git-check
-        exclude: (CHANGELOG.md)
+        files: "CHANGELOG.md"
   - repo: https://github.com/commitizen-tools/commitizen
     rev: 3.5.3
     hooks:
