--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,13 +1,11 @@
 # This workflow will upload a Python Package using Twine when a release is created
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
 
-name: Upload Python Package
+name: Publish to PYPI
 
-# remove once repo is ready to be published
-on: workflow_dispatch
-#on:
-#  release:
-#    types: [published]
+on:
+  release:
+    types: [published]
 
 permissions:
   contents: read
