feat: added huggingface dependency to project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,8 +68,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 sentencepiece = "^0.2.0"
+transformers = "^4.39.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -100,6 +101,7 @@ match = "(main)"
 
 [tool.semantic_release.changelog.environment]
 newline_sequence = "\n"
+
 
 
 
