fix: uses tokenizer instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,9 +68,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.7"
 sentencepiece = "^0.2.0"
-transformers = "^4.39.1"
+tokenizers = "^0.15.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -101,6 +101,10 @@ match = "(main)"
 
 [tool.semantic_release.changelog.environment]
 newline_sequence = "\n"
+
+
+
+
 
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
