fix: depend on less restrictive version of tokenizers

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,8 +69,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-sentencepiece = "^0.2.0"
-tokenizers = "^0.15.2"
+sentencepiece = ">=0.2.0,<1.0.0"
+tokenizers = ">=0.15.0,<1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -101,11 +101,6 @@ match = "(main)"
 
 [tool.semantic_release.changelog.environment]
 newline_sequence = "\n"
-
-
-
-
-
 
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
