--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ packages = [
 python = "^3.7"
 sentencepiece = ">=0.2.0,<1.0.0"
 tokenizers = ">=0.15.0,<1.0.0"
+anyio = "3.7.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -101,6 +102,9 @@ match = "(main)"
 
 [tool.semantic_release.changelog.environment]
 newline_sequence = "\n"
+
+
+
 
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
