--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Poetry
         run: |
-          pipx install poetry
+          pipx install poetry pipenv==2023.9.8
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
