--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,6 +72,8 @@ python = "^3.7"
 sentencepiece = ">=0.2.0,<1.0.0"
 tokenizers = ">=0.15.0,<1.0.0"
 aiofiles = "^23.2"
+typing-extensions = "4.7.1"
+zipp = "3.14.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
