--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,14 +44,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install Poetry
         run: |
           pipx install poetry
-          pipx install pipenv==2023.9.8
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
