--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ packages = [
 python = "^3.8"
 sentencepiece = ">=0.2.0,<1.0.0"
 tokenizers = ">=0.15.0,<1.0.0"
-aiofiles = "^23.2"
+anyio = "^4.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -102,6 +102,12 @@ match = "(main)"
 
 [tool.semantic_release.changelog.environment]
 newline_sequence = "\n"
+
+
+
+
+
+
 
 
 
