feat: Async tokenizer (#86)
* feat: support async, wip

* feat: fix and add tests, examples, update readme

* fix: poetry lock

* fix: anyio -> aiofiles

* fix: try 3.8

* fix: remove 3.7 from tests

* fix: poetry lock

* fix: add 3.7 back

* fix: poetry lock

* fix: poetry.lock

* ci: pipenv

* fix: pipenv

* fix: pipenv

* fix: pyproject

* fix: lock

* fix: version

* fix: Removed aiofiles

* ci: update python version,

* fix: switch from aiofiles to anyio, remove redundant comments

* chore: poetry lock

* fix: disable initializing async classes directly, cr comments

* test: fix import

* ci: add asyncio-mode to test workflow

* fix: to_thread -> run_in_executor

* ci: add asyncio

* fix: cr comments

* fix: cr comments

---------

Co-authored-by: asafg <asafg@ai21.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,7 @@ packages = [
 python = "^3.8"
 sentencepiece = ">=0.2.0,<1.0.0"
 tokenizers = ">=0.15.0,<1.0.0"
+anyio = "^4.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
@@ -102,11 +103,13 @@ match = "(main)"
 [tool.semantic_release.changelog.environment]
 newline_sequence = "\n"
 
+
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
 pytest = "7.4.4"
 pytest-cov = "4.0.0"
 pytest-mock = "3.11.1"
+pytest-asyncio = "^0.23.7"
 
 [[tool.poetry.source]]
 name = "PyPI"
