--- a/.github/workflows/semantic-pr.yaml
+++ b/.github/workflows/semantic-pr.yaml
@@ -6,19 +6,18 @@ concurrency:
   cancel-in-progress: true
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - opened
       - edited
       - reopened
 jobs:
   semantic-pr:
-    permissions: write-all
     runs-on: ubuntu-20.04
     timeout-minutes: 1
     steps:
       - name: Semantic pull-request
-        uses: amannn/action-semantic-pull-request@v5.0.2
+        uses: amannn/action-semantic-pull-request@v5.5.2
         with:
           requireScope: false
           wip: true
