--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,12 +104,14 @@ match = "(main)"
 newline_sequence = "\n"
 
 
+
 [tool.poetry.group.test.dependencies]
 coverage = "^7.1.0"
 pytest = "7.4.4"
 pytest-cov = "4.0.0"
 pytest-mock = "3.11.1"
 pytest-asyncio = "^0.23.7"
+pytest-lazy-fixture = "^0.6.3"
 
 [[tool.poetry.source]]
 name = "PyPI"
