ci: add hf token from secrets for tests

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 env:
   POETRY_VERSION: "1.4.2"
   POETRY_URL: https://install.python-poetry.org
+  HF_TOKEN: ${{ secrets.HF_TOKEN }}
 
 jobs:
   lint:
